# opensource

./: LICENSE  README.md
opencl-1-2-hello/: CMakeLists.txt
opencl-1-2-hello/src/: hello.cpp
